--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="container"><img src="img/banner-1.png" class="img-thum"></div>
           </div>
           <div class="carousel-item" style="background-image: url('img/back-2.png')">
-            <div class="container"><img src="img/banner-2.png"></div>
+            <div class="container"><img src="img/banner-2.png" class="img-thum"></div>
           </div>
           <div class="carousel-item" style="background-image: url('img/back-3.png')">
-            <div class="container"><img src="img/banner-3.png"></div>
+            <div class="container"><img src="img/banner-3.png" class="img-thum"></div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -251,7 +251,7 @@
           <div class="card h-100">
             <img src="img/hot.png" style="position: absolute" />
             <i class="far fa-heart icon-like"></i>
-            <img class="img-thum" src="img/class-3-announcer-home-thum.png" />
+            <img class="img-thum" src="img/57-59.png" />
             <span class="card-title-0">매일매일 쓰고 싶은 나만의 일기</span>
             <span class="card-text-0">김건구 · 12월 23일 · LIVE, 온라인</span>
             <div class="row card-extra">
