--- a/mycontents.html
+++ b/mycontents.html
@@ -22,8 +22,8 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:68px; min-height:50%">
-    <h3 class="my-4">내 콘텐츠</h1>
+  <div class="container" style="margin-top:150px; min-height:50%">
+    <h3 class="my-4 mt-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
         <div class="col-lg-8">
