--- a/nav.html
+++ b/nav.html
@@ -34,8 +34,8 @@
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <!-- <button class="round_hts"/> -->
-          <a class="nav-link text-black" href="#">알림</a>
-          <div id="round_hts" style="margin-top:-33px; margin-left:38px;margin-right:0px"></div>
+          <a class="nav-link text-black" href="#">알림aa</a>
+          <div id="round_hts" style="margin-top:-33px;margi-bottom:0px;margin-left:38px;margin-right:0px"></div>
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="#">찜목록</a>
@@ -58,4 +58,5 @@
       </ul>
     </div>
   </div>
+  <hr>
 </nav>
