--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 
-  <body>
+  <body class="pt-5">
     <div w3-include-html="nav.html"></div>
     <!-- banner section -->
     <section>
