--- a/mycontents.html
+++ b/mycontents.html
@@ -18,7 +18,7 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 
-<body>
+<body pt-5>
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
