--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg bg-white">
-  <div class="container">
+  <div class="container"">
     <a class="navbar-brand LOGOBlack" href="index.html"><img src="img/logo-black.svg"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -58,5 +58,4 @@
       </ul>
     </div>
   </div>
-  <hr>
 </nav>
