--- a/class_live.html
+++ b/class_live.html
@@ -24,7 +24,7 @@
   <div w3-include-html="nav.html"></div>
   <!-- Page Content -->
 
-  <div class="container">
+  <div class="container pt-5">
 
     <img class="img-live" src="img/chat1.png" />
   </div>
