--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="pt-5">
+<body class="pt-6">
   <div w3-include-html="nav.html"></div>
   <!-- banner section -->
   <section>
@@ -35,13 +35,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active" style="background-image: url('img/back-1.png')">
-          <div class="container"><img src="img/banner-1.png" class="img-thum"></div>
+          <div class="container" style="height:480px"><img src="img/banner-1.png" class="img-thum"></div>
         </div>
         <div class="carousel-item" style="background-image: url('img/back-2.png')">
-          <div class="container"><img src="img/banner-2.png" class="img-thum"></div>
+          <div class="container" style="height:480px"><img src="img/banner-2.png" class="img-thum"></div>
         </div>
-        <div class="carousel-item" style="background-image: url('img/back-3.png')">
-          <div class="container"><img src="img/banner-3.png" class="img-thum"></div>
+        <div class="≈" style="background-image: url('img/back-3.png')">
+          <div class="container" style="height:480px"><img src="img/banner-3.png" class="img-thum"></div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
