--- a/mycontents.html
+++ b/mycontents.html
@@ -18,11 +18,11 @@
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 
-<body pt-5>
+<body class="pt-6">
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:150px; min-height:50%">
+  <div class="container" style="margin-top: 50px;min-height:50%">
     <h3 class="my-4 mt-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
