--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
         <div class="carousel-item" style="background-image: url('img/back-2.png')">
           <div class="container" style="height:480px"><img src="img/banner-2.png" class="img-thum"></div>
         </div>
-        <div class="≈" style="background-image: url('img/back-3.png')">
+        <div class="carousel-inner" style="background-image: url('img/back-3.png')">
           <div class="container" style="height:480px"><img src="img/banner-3.png" class="img-thum"></div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <img src="img/ic-24-left-main.png"/>
+          <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <img src="img/ic-24-right-main.png"/>
+          <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
           <span class="sr-only">Next</span>
         </a>
       </div>
