--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image: url('img/back-1.png')">
+        <div class="carousel-item active" style="background-image: url('img/back-1.png'); height:491px">
           <div class="container" style="height:480px"><img src="img/banner-1.png" class="img-thum"></div>
         </div>
-        <div class="carousel-item" style="background-image: url('img/back-2.png')">
-          <div class="container" style="height:480px"><img src="img/banner-2.png"></div>
+        <div class="carousel-item" style="background-image: url('img/back-2.png'); height:491px">
+          <div class="container" style="height:480px"><img src="img/banner-2.png" class="img-thum"></div>
         </div>
-        <div class="carousel-item" style="background-image: url('img/back-3.png')">
-          <div class="container" style="height:480px"><img src="img/banner-3.png"></div>
+        <div class="carousel-item" style="background-image: url('img/back-3.png'); height:491px">
+          <div class="container" style="height:480px"><img src="img/banner-3.png" class="img-thum"></div>
         </div>
 
       </div>
