--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <!-- <img class="carousel-control-prev-icon" src="img/ic-24-left-main.png"/> -->
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <img src="img/ic-24-left-main.png"/>
+        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
         <span class="sr-only">Previous</span>
       </a>
       <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <!-- <img src="img/ic-24-right-main.png"/> -->
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <img src="img/ic-24-right-main.png"/>
+        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
         <span class="sr-only">Next</span>
       </a>
 
