--- a/class_live.html
+++ b/class_live.html
@@ -25,8 +25,16 @@
   <!-- Page Content -->
 
   <div class="container pt-5">
+    <div class="row">
+      <div class="col-lg-9">
+        <img class="img-live" src="img/live-1.png" />
+      </div>
+      <div class="col-lg-3">
+        <img class="img-live" src="img/live-2.png" />
+      </div>
 
-    <img class="img-live" src="img/chat1.png" />
+    </div>
+
   </div>
 
   <div class="container">
