--- a/class_live.html
+++ b/class_live.html
@@ -25,12 +25,12 @@
   <!-- Page Content -->
 
   <div class="container pt-5">
-    <div class="row">
+    <div class="row pt-5">
       <div class="col-lg-9">
         <img class="img-live" src="img/live-1.png" />
       </div>
       <div class="col-lg-3">
-        <img class="img-live" src="img/live-2.png" />
+        <img class="img-live2" src="img/live-2.png" />
       </div>
 
     </div>
@@ -43,7 +43,7 @@
         <img class="img/img-thum" src="img/live-t1.png"/>
       </div>
       <div class="col-lg-7">
-        <p class="teacher-text-extra" style="text-align:left">이슬기 선생님</br>
+        <p class="teacher-text-class" style="text-align:left">이슬기 선생님</br>
           <i class="fas fa-star"></i>
           4.8 (120)</p>
       </div>
@@ -57,7 +57,7 @@
       <div class="col-lg-1">
       </div>
       <div class="col-lg-6">
-        <p class="teacher-text-extra">안녕하세요. 아나운서 이슬기입니다.<br>
+        <p class="teacher-text-class">안녕하세요. 아나운서 이슬기입니다.<br>
           아나운서 스피치 수업으로 친구들과 함께 하면서 스스로 자신감을 키울 수 있도록 도움을 주고 싶어요.</p>
       </div>
       <div class="col-lg-5">
