--- a/class_live.html
+++ b/class_live.html
@@ -26,21 +26,38 @@
 
   <div class="container pt-5">
     <div class="row pt-5">
-      <div class="col-lg-9">
+      <div class="col-lg-8" style="padding-right:30px">
         <img class="img-live" src="img/live-1.png" />
+        <h2 class="title-text-2">[LIVE] 아나운서한테 배우는 스피치 트레이닝!</h2>
+        <p class="teacher-text-class" style="font-size:16px;">현재 124명 시청중 · 스트리밍 시작 : 2020.11.29 13:00</p>
+        <hr class="hr-live-1">
       </div>
-      <div class="col-lg-3">
-        <img class="img-live2" src="img/live-2.png" />
+      <div class="col-lg-4">
+        <div class="card card-chat" style="border: solid 1px #e0e1e7;">
+          <!-- <img src="img/st-hot-1.png" style="position: absolute" /> -->
+          <!-- <i class="far fa-heart icon-like"></i> -->
+          <!-- <img class="img-thum" src="img/class-3-announcer-home-thum.png" /> -->
+          <span class="card-title-0">아나운서한테 배우는 스피치 트레이닝</span>
+          <span class="card-text-0">이슬기 · 12월 18일 · LIVE, 온라인</span>
+          <div class="row card-extra">
+            <i class="fas fa-user text-pink"></i>
+            <span class="card-text-extra text-pink">18명 참여</span>
+            <i class="fas fa-star" style="margin-left:16px;"></i>
+            <span class="card-text-extra">4.8 (120)</span>
+          </div>
+        </div>
       </div>
-
+      <!-- <img class="img-live2" src="img/live-2.png" /> -->
     </div>
 
   </div>
 
-  <div class="container">
+  </div>
+
+  <div class="container pt-4">
     <div class="row">
       <div class="col-lg-1">
-        <img class="img/img-thum" src="img/live-t1.png"/>
+        <img class="img/img-thum" src="img/live-t1.png" />
       </div>
       <div class="col-lg-7">
         <p class="teacher-text-class" style="text-align:left">이슬기 선생님</br>
