--- a/class_live.html
+++ b/class_live.html
@@ -37,15 +37,73 @@
           <!-- <img src="img/st-hot-1.png" style="position: absolute" /> -->
           <!-- <i class="far fa-heart icon-like"></i> -->
           <!-- <img class="img-thum" src="img/class-3-announcer-home-thum.png" /> -->
-          <span class="card-title-0">아나운서한테 배우는 스피치 트레이닝</span>
-          <span class="card-text-0">이슬기 · 12월 18일 · LIVE, 온라인</span>
-          <div class="row card-extra">
-            <i class="fas fa-user text-pink"></i>
-            <span class="card-text-extra text-pink">18명 참여</span>
-            <i class="fas fa-star" style="margin-left:16px;"></i>
-            <span class="card-text-extra">4.8 (120)</span>
+          <div class="card-header-1" style="height: 50px; margin-top:12px">
+            <span class="card-title-0" style="margin-left:5px">채팅</span>
+          </div>
+          <div class="chat-body" style="height:500px;">
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">김해피</span>
+              <span class="card-text-ment-1">선생님 안녕하세요~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">박아민</span>
+              <span class="card-text-ment-1">선생님 저희 아이랑 같이 보고 있습니다. 아이가 너무</span>
+              <span class="card-text-ment-2">좋아해요~~~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">성희맘</span>
+              <span class="card-text-ment-1">선생님 설명 정말 잘하시네요 ~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">김해피</span>
+              <span class="card-text-ment-1">선생님 안녕하세요~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">박아민</span>
+              <span class="card-text-ment-1">선생님 저희 아이랑 같이 보고 있습니다. 아이가 너무</span>
+              <span class="card-text-ment-2">좋아해요~~~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">성희맘</span>
+              <span class="card-text-ment-1">선생님 설명 정말 잘하시네요 ~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">박아민</span>
+              <span class="card-text-ment-1">선생님 저희 아이랑 같이 보고 있습니다. 아이가 너무</span>
+              <span class="card-text-ment-2">좋아해요~~~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">성희맘</span>
+              <span class="card-text-ment-1">선생님 설명 정말 잘하시네요 ~!</span>
+            </div>
+            <div class="row" style="margin-left:17px; margin-top:17px">
+              <img class="img/img-thum" src="img/th.png" />
+              <span class="card-text-title">성희맘</span>
+              <span class="card-text-ment-1">선생님 설명 정말 잘하시네요 ~!</span>
+            </div>
+          </div>
+
+
+          <div class="card-footer" style="height: 140px;background-color:#fbfbfb;">
+            <img class="img/img-thum" src="img/profile-3.png" />
+            <span class="card-text-title">도희맘</span>
+            <input type="text" class="chat-input" placeholder="채팅을 입력해주세요">
+            <div class="row">
+              <span class="chat-3">0/100</span>
+              <button class="btn-hts-1 text-white">작성</button>
+            </div>
+
           </div>
         </div>
+
       </div>
       <!-- <img class="img-live2" src="img/live-2.png" /> -->
     </div>
