--- a/class_live.html
+++ b/class_live.html
@@ -37,7 +37,7 @@
           <!-- <img src="img/st-hot-1.png" style="position: absolute" /> -->
           <!-- <i class="far fa-heart icon-like"></i> -->
           <!-- <img class="img-thum" src="img/class-3-announcer-home-thum.png" /> -->
-          <div class="card-footer" style="height: 50px; margin-top:12px">
+          <div class="card-header" style="height: 50px; margin-top:12px">
             <span class="card-title-0" style="margin-left:5px">채팅</span>
           </div>
           <div class="chat-body" style="height:500px;">
