--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
+        <a class="control-l" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <img src="img/ic-24-left-main.png"/>
+        </a>
         <div class="carousel-item active" style="background-image: url('img/back-1.png'); height:491px">
           <div class="container" style="height:480px"><img src="img/banner-1.png" class="img-thum"></div>
         </div>
@@ -117,10 +120,10 @@
   <img src="img/mask.png" class="img-mask" />
   <!-- Page Content -->
   <div class="container">
-    <div class="row ml-1 mb-2">
+    <div class="row ml-1 mb-3">
       <h2 class="title-text-1">This Week </h2>
-      <h2 class="title-text-2">이번주</h2>
-      <h2 class="title-text-2-1">LIVE!</h2>
+      <h2 class="title-text-2">이번주 LIVE!</h2>
+      <!-- <h2 class="title-text-2-1">LIVE!</h2> -->
       <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
       <img class="ic-24" src="img/ic-24-right.svg" />
     </div>
@@ -176,10 +179,10 @@
     <!-- /.row -->
 
     <!-- 온라인 VOD 클래스 -->
-    <div class="row ml-1 mb-2" style="margin-top:92px">
+    <div class="row ml-1 mb-3" style="margin-top:92px">
       <h2 class="title-text-1-1">Online</h2>
-      <h2 class="title-text-2-1">온라인</h2>
-      <h2 class="title-text-2">VOD 클래스</h2>
+      <!-- <h2 class="title-text-2-1">온라인 VOD 클래스</h2> -->
+      <h2 class="title-text-2">온라인 VOD 클래스</h2>
       <img class="ic-24" src="img/ic-24-right.svg" />
     </div>
 
@@ -244,7 +247,7 @@
   <div class="container">
 
     <!-- 지금 가장 인기 있는 LIVE -->
-    <div class="row ml-1 mb-2">
+    <div class="row ml-1 mb-3">
       <h2 class="title-text-1">Hot</h2>
       <h2 class="title-text-2">지금 가장</h2>
       <h2 class="title-text-2-1">인기 있는 LIVE</h2>
@@ -300,7 +303,7 @@
         </div>
       </div>
     </div>
-    <div class="row ml-1 mb-2" style="margin-top:93px;">
+    <div class="row ml-1 mb-3" style="margin-top:93px;">
       <h2 class="title-text-1-1">Event</h2>
       <h2 class="title-text-2">11월 한정 아이쿠카</h2>
       <h2 class="title-text-2-1">특가 LIVE</h2>
@@ -423,7 +426,7 @@
     </div>
 
     <!-- NEW 높은 리뷰와 평점의 선생님 -->
-    <div class="row ml-1 mb-2" style="margin-top:90px;">
+    <div class="row ml-1 mb-4" style="margin-top:90px;">
       <h2 class="title-text-1">NEW</h2>
       <h2 class="title-text-2">새롭게 시작되는</h2>
       <h2 class="title-text-2-1">신규 LIVE</h2>
