--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
   <div class="container">
     <div class="row ml-1 mb-3">
       <h2 class="title-text-1">This Week </h2>
-      <h2 class="title-text-2">이번주 LIVE!</h2>
-      <!-- <h2 class="title-text-2-1">LIVE!</h2> -->
+      <h2 class="title-text-2">이번주</h2>
+      <!-- <h2 class="title-text-2">이번주 LIVE!</h2> -->
+      <h2 class="title-text-2-1">LIVE!</h2>
       <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
       <img class="ic-24" src="img/ic-24-right.svg" />
     </div>
@@ -182,7 +183,8 @@
     <div class="row ml-1 mb-3" style="margin-top:92px">
       <h2 class="title-text-1-1">Online</h2>
       <!-- <h2 class="title-text-2-1">온라인 VOD 클래스</h2> -->
-      <h2 class="title-text-2">온라인 VOD 클래스</h2>
+      <h2 class="title-text-2-1">온라인</h2>
+      <h2 class="title-text-2">VOD 클래스</h2>
       <img class="ic-24" src="img/ic-24-right.svg" />
     </div>
 
