--- a/mycontents.html
+++ b/mycontents.html
@@ -46,7 +46,7 @@
                   <span class="card-title-0">LIVE 예정</span>
                   <span class="card-title-0" style="color:#e4a8b0;">LIVE 진행중</span>
                   <div id="round_hts" style="margin-top:40px; margin-left:-45px"></div>
-                  <span class="card-title-0">종료된 LIVE</span>
+                  <span class="card-title-0" style="margin-left:12px">종료된 LIVE</span>
                   <span class="card-title-0">취소내역</span>
                 </div>
 
