--- a/index.html
+++ b/index.html
@@ -375,8 +375,7 @@
               <div class="container text-center">
                 <img src="img/t-1.png" />
                 <p class="teacher-title-1">이슬기</p>
-                <i class="fas fa-star"></i>
-                <span class="teacher-text-extra">4.8 (120)</span>
+                <span class="teacher-text-extra-score"><i class="fas fa-star"></i> 4.8 (120)</span>
                 <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
               </div>
             </div>
@@ -384,8 +383,7 @@
               <div class="container text-center">
                 <img src="img/t-2.png" />
                 <p class="teacher-title-1">엄소연</p>
-                <i class="fas fa-star"></i>
-                <span class="teacher-text-extra">4.8 (120)</span>
+                <span class="teacher-text-extra-score"><i class="fas fa-star"></i> 4.8 (120)</span>
                 <p class="teacher-text-extra text-pink">#신체운동지능 #뮤지컬</p>
               </div>
             </div>
@@ -395,8 +393,7 @@
           <div class="container text-center">
             <img src="img/t-3.png" />
             <p class="teacher-title-1">신지원</p>
-            <i class="fas fa-star"></i>
-            <span class="teacher-text-extra">4.8 (120)</span>
+            <span class="teacher-text-extra-score"><i class="fas fa-star"></i> 4.8 (120)</span>
             <p class="teacher-text-extra text-pink">#공간지능 #리틀마누</p>
           </div>
         </div>
@@ -408,8 +405,7 @@
               <div class="container text-center">
                 <img src="img/t-4.png" />
                 <p class="teacher-title-1">이윤규</p>
-                <i class="fas fa-star"></i>
-                <span class="teacher-text-extra">4.8 (120)</span>
+                <span class="teacher-text-extra-score"><i class="fas fa-star"></i> 4.8 (120)</span>
                 <p class="teacher-text-extra text-pink">#자기성찰지능 #공부법</p>
               </div>
             </div>
@@ -418,7 +414,7 @@
                 <img src="img/t-5.png" />
                 <p class="teacher-title-1">투악스</p>
                 <i class="fas fa-star"></i>
-                <span class="teacher-text-extra" style="margin-top:15px">4.8 (120)</span>
+                <span class="teacher-text-extra-score" style="margin-top:15px">4.8 (120)</span>
                 <p class="teacher-text-extra text-pink">#음악지능 #비트박스</p>
               </div>
             </div>
