--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="row card-extra">
             <i class="fas fa-star"></i>
             <span class="card-text-extra">4.8 (120)</span>
-            <span class="span-ready ml-auto" style="margin-right:25px">준비물</span>
+            <span class="span-ready-card ml-auto" style="margin-right:25px">준비물</span>
           </div>
         </div>
       </div>
