--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
   <!-- Footer -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
   <footer class="py-5 mt-5 footer-hts">
     <div class="container">
       <div class="row">
