--- a/mycontents.html
+++ b/mycontents.html
@@ -16,6 +16,7 @@
   <link href="css/happytoseeyou.css" rel="stylesheet">
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
 </head>
 
 <body class="pt-7">
