--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,5 @@
 <!-- Navigation -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
 <nav class="navbar fixed-top navbar-expand-lg bg-white">
   <div class="container"">
     <a class="navbar-brand LOGOBlack" href="index.html"><img src="img/logo-black.svg"></a>
