--- a/nav.html
+++ b/nav.html
@@ -27,7 +27,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
-          <a class="nav-link text-black" href="#" style="text-size: 14px;">클래스 홈</a>
+          <a class="nav-link text-black" href="#" style="text-size: 14px;">선생님 신청</a>
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="mycontents.html">내 콘텐츠</a>
