--- a/class_live.html
+++ b/class_live.html
@@ -118,9 +118,8 @@
         <img class="img/img-thum" src="img/live-t1.png" />
       </div>
       <div class="col-lg-7">
-        <p class="teacher-text-class" style="text-align:left">이슬기 선생님</br>
-          <i class="fas fa-star"></i>
-          4.8 (120)</p>
+        <p class="teacher-text-class" style="text-align:left;line-height: 1.71;
+  letter-spacing: -0.2px;">이슬기 선생님<br><i class="fas fa-star"></i>  4.8 (120)</p>
       </div>
       <div class="col-lg-1">
         <button class="btn-hts text-white">알림</button>
@@ -131,8 +130,9 @@
     <div class="row">
       <div class="col-lg-1">
       </div>
-      <div class="col-lg-6">
-        <p class="teacher-text-class">안녕하세요. 아나운서 이슬기입니다.<br>
+      <div class="col-lg-7">
+        <p class="teacher-text-class" style="line-height: 1.71;
+  letter-spacing: -0.2px;">안녕하세요. 아나운서 이슬기입니다.<br>
           아나운서 스피치 수업으로 친구들과 함께 하면서 스스로 자신감을 키울 수 있도록 도움을 주고 싶어요.</p>
       </div>
       <div class="col-lg-5">
