--- a/mycontents.html
+++ b/mycontents.html
@@ -60,8 +60,8 @@
                 </div>
                 <div class="col-lg-6 ml-2">
                   <p class="content-title">아나운서한테 배우는 스피치 트레이닝</p>
-                  <p class="content-text11">이슬아 선생님</p>
-                  <p class="content-text13">11월 19일(토) 13:00 ~ 14:00</p>
+                  <span class="content-text11">이슬아 선생님</span><br>
+                  <span class="content-text13">11월 19일(토) 13:00 ~ 14:00</span>
 
                 </div>
                 <div class="col-lg-4">
